--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,11 +2,55 @@
 font-family: 'Fira Code', monospace;
 font-family: 'Playfair Display', serif;
 font-family: 'Poppins', sans-serif; */
-h1 {
-  font-family: "Playfair Display", serif;
-  font-weight: bold;
+:root {
+  --primary-color: #003348;
+  --secondary-color: #e3f7ff;
+  --navigation-color: #bbd4ed;
+  --btn-color: #4cb0e1;
+  --heading-font: "Playfair Display", serif;
+  --default-font: "Poppins", sans-serif;
 }
-p {
-  font-family: "Poppins", sans-serif;
+h1,
+h2,
+h3,
+h4,
+h4,
+h6 {
+  font-family: var(--heading-font);
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 128px;
+  padding-top: 223px;
+}
+
+.hero {
+  font-family: var(--default-font);
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  text-align: center;
+}
+
+.hero h2 {
+  font-family: var(--default-font);
   font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
+}
+.hero .btn-contact {
+  color: var(--secondary-color);
+  background: var(--btn-color);
+  padding: 18px 30px;
+  border-radius: 4px;
+  margin-top: 49px;
+}
+.hero .footer {
+  margin-top: 206px;
+}
+.social-media {
+  padding: 41px 0px 40px;
+  display: flex;
+  justify-content: center;
+  font-size: 24px;
 }
