--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,6 +54,7 @@ h1 {
   display: flex;
   justify-content: center;
   font-size: 24px;
+  transition: all 200ms ease-in-out;
 }
 .icon {
   padding: 0px 20px;
