--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -95,8 +95,11 @@ h2 {
 /* specific to work page */
 .secondary-title {
   font-size: 64px;
-  width: 825px;
+  width: 600px;
   text-align: start;
   padding: 0px;
-  margin: 140px 0 0 167px;
+}
+img {
+  aspect-ratio: 5/4;
+  object-fit: cover;
 }
