--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -99,7 +99,31 @@ h2 {
   text-align: start;
   padding: 0px;
 }
+.project-description h2 {
+  font-family: var(--heading-font);
+  font-weight: bold;
+  font-size: 50px;
+  color: var(--navigation-color);
+}
 img {
   aspect-ratio: 5/4;
   object-fit: cover;
 }
+.project-description {
+  padding-top: 90px;
+}
+.launch-link {
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  /* background: rgba(187, 212, 237, 0.6); */
+  border: solid 1px var(--navigation-color);
+  color: var(--secondary-color);
+  font-family: bitter;
+  transition: all 200ms ease-in-out;
+}
+.launch-link:hover {
+  color: var(--primary-color);
+  background: var(--secondary-color);
+  }
