--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -112,6 +112,9 @@ img {
 .project-description {
   padding-top: 90px;
 }
+.btn {
+  margin-top: 20px;
+}
 .launch-link {
   border-radius: 4px;
   padding: 20px 15px;
@@ -126,4 +129,65 @@ img {
 .launch-link:hover {
   color: var(--primary-color);
   background: var(--secondary-color);
+}
+
+@media (max-width: 420px) {
+  h1 {
+    font-weight: bold;
+    font-size: 80px;
+    padding-top: 150px;
   }
+  h2 {
+    font-size: 16px;
+    line-height: 2;
+  }
+  .intro-links a {
+    font-size: 12px;
+  }
+  .parent {
+    position: relative;
+  }
+  .footer {
+    position: fixed;
+    padding: 10px 10px 0px 10px;
+    bottom: 0;
+    width: 100%;
+    /* Height of the footer*/
+    height: 120px;
+  }
+  .email {
+    font-size: 14px;
+  }
+  .social-media {
+    font-size: 20px;
+  }
+  .icon {
+    padding: 0px 15px;
+  }
+  /* Work page */
+  .container {
+    max-width: 100%;
+  }
+  .secondary-title {
+    font-size: 40px;
+    width: 375px;
+    text-align: center;
+    padding: 0px;
+  }
+  .project-description {
+    padding: 5px 10px;
+    margin-bottom: 40px;
+    font-size: 13px;
+  }
+  .project-description h2 {
+    font-size: 30px;
+  }
+  .project-description a {
+    margin-top: 0px;
+  }
+}
+@media (min-height: 800px) {
+  h1 {
+    padding-top: 300px;
+  }
+}
