--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -93,6 +93,9 @@ h2 {
 }
 
 /* specific to work page */
+.container {
+  text-align: center;
+}
 .secondary-title {
   font-size: 64px;
   width: 600px;
@@ -124,6 +127,7 @@ img {
   border: solid 1px var(--navigation-color);
   color: var(--secondary-color);
   font-family: bitter;
+
   transition: all 200ms ease-in-out;
 }
 .launch-link:hover {
@@ -131,7 +135,7 @@ img {
   background: var(--secondary-color);
 }
 
-@media (max-width: 420px) {
+@media (max-width: 830px) {
   h1 {
     font-weight: bold;
     font-size: 80px;
@@ -171,6 +175,7 @@ img {
   .secondary-title {
     font-size: 40px;
     width: 375px;
+
     text-align: center;
     padding: 0px;
   }
