--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -108,12 +108,36 @@ h2 {
   font-size: 50px;
   color: var(--navigation-color);
 }
+@keyframes show {
+  from {
+    opacity: 0;
+    scale: 25%;
+  }
+  to {
+    opacity: 1;
+    scale: 100%;
+  }
+}
 img {
   aspect-ratio: 5/4;
   object-fit: cover;
+
+  /* scrolling animation */
+  view-timeline-name: --image;
+  view-timeline-axis: block;
+  animation-timeline: --image;
+  animation-name: show;
+  animation-range: entry 25% cover 50%;
+  animation-fill-mode: both;
 }
 .project-description {
   padding-top: 90px;
+  view-timeline-name: --image;
+  view-timeline-axis: block;
+  animation-timeline: --image;
+  animation-name: show;
+  animation-range: entry 25% cover 50%;
+  animation-fill-mode: both;
 }
 .btn {
   margin-top: 20px;
