--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -139,6 +139,9 @@ h2 {
   animation-range: entry 25% cover 50%;
   animation-fill-mode: both;
 }
+.weather {
+  padding-top: 60px;
+}
 .btn {
   margin-top: 20px;
 }
@@ -231,7 +234,6 @@ h2 {
   .secondary-title {
     font-size: 40px;
     width: 375px;
-
     text-align: center;
     padding: 0px;
   }
@@ -246,7 +248,7 @@ h2 {
   .project-description a {
     margin-top: 0px;
   }
-
+  /* about me page */
   .about-me h1,
   h2 {
     text-align: center;
