--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -174,7 +174,7 @@ h2 {
 .about-me h2 {
   font-size: 18px;
 }
-.about-me p {
+.about-me-text {
   font-size: 16px;
   line-height: 35px;
   font-weight: 200;
@@ -193,6 +193,18 @@ h2 {
 .about-me .intro-links {
   font-size: 18px;
 }
+#contact-me {
+  margin-top: 100px;
+}
+#contact-me .secondary-title {
+  font-family: var(--heading-font);
+  font-size: 55px;
+}
+#contact-me .footer {
+  margin-top: 50px;
+
+  /* padding-bottom: 50px; */
+}
 
 @media (max-width: 830px) {
   h1 {
@@ -210,7 +222,7 @@ h2 {
   .parent {
     position: relative;
   }
-  .footer {
+  .parent .footer {
     position: fixed;
     padding: 10px 10px 0px 10px;
     bottom: 0;
@@ -261,6 +273,10 @@ h2 {
   .about-me .intro-links a {
     font-size: 18px;
     margin-left: 10px;
+  }
+
+  #contact-me .email {
+    font-size: 18px;
   }
 }
 @media (min-height: 800px) {
