--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -282,6 +282,9 @@ h2 {
   #contact-me .secondary-title {
     text-align: left;
     width: 500px;
+    max-width: 100%;
+    line-height: 60px;
+    margin-bottom: 40px;
   }
 
   #contact-me .email {
