--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -94,7 +94,7 @@ h2 {
 
 /* specific to work page */
 .container {
-  text-align: center;
+  /* text-align: center; */
 }
 .secondary-title {
   font-size: 64px;
@@ -193,21 +193,21 @@ h2 {
 .about-me .intro-links {
   font-size: 18px;
 }
-#contact-me {
+#contact {
   margin-top: 100px;
 }
-#contact-me .secondary-title {
+#contact .secondary-title {
   font-family: var(--heading-font);
   font-size: 55px;
 }
-#contact-me .footer {
+#contact .footer {
   margin-top: 50px;
   padding-bottom: 0px;
 }
-#contact-me .email {
+#contact .email {
   transition: all 200ms ease-in-out;
 }
-#contact-me .email:hover {
+#contact .email:hover {
   cursor: pointer;
   transform: scale(1.1);
 }
@@ -279,7 +279,7 @@ h2 {
     font-size: 18px;
     margin-left: 10px;
   }
-  #contact-me .secondary-title {
+  #contact .secondary-title {
     text-align: left;
     width: 500px;
     max-width: 100%;
@@ -287,7 +287,7 @@ h2 {
     margin-bottom: 40px;
   }
 
-  #contact-me .email {
+  #contact .email {
     font-size: 18px;
   }
 }
