--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -211,6 +211,9 @@ h2 {
   cursor: pointer;
   transform: scale(1.1);
 }
+.navbar-brand {
+  margin-left: 80px;
+}
 @media (max-width: 830px) {
   h1 {
     font-weight: bold;
@@ -289,6 +292,9 @@ h2 {
 
   #contact .email {
     font-size: 18px;
+  }
+  .navbar-brand {
+    margin-left: 0px;
   }
 }
 @media (min-height: 800px) {
