--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -219,6 +219,23 @@ h2 {
 .navbar-nav {
   padding-right: 139px;
 }
+.signature {
+  text-align: right;
+  font-family: bitter;
+  color: var(--navigation-color);
+  margin-right: 20px;
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+.signature a {
+  text-decoration: none;
+  color: var(--navigation-color);
+  font-weight: 700;
+  transition: all 200ms ease-in-out;
+}
+.signature a:hover {
+  color: var(--btn-color);
+}
 @media (max-width: 830px) {
   h1 {
     font-weight: bold;
