--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -189,6 +189,10 @@ h2 {
   padding-left: 20px;
   border-radius: 4px;
 }
+.about-me-links {
+  display: flex;
+  justify-content: space-evenly;
+}
 
 .about-me .intro-links {
   font-size: 18px;
@@ -311,6 +315,7 @@ h2 {
     font-size: 18px;
     /* margin-left: 10px; */
   }
+
   #contact {
     padding: 0 10px 0 0px;
   }
